--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,3 +1,30 @@
-.profile-dropdown {
-  position: absolute;
-}
+/* src/Navigation.css */
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #20232a;
+    padding: 10px 20px;
+  }
+  
+  li {
+    margin: 0 15px;
+  }
+  
+  a {
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    padding: 8px 16px;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .logo {
+    height: 50px; /* Adjust the height as necessary */
+    width: auto;
+  }
+  
