--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -44,3 +44,9 @@ a:hover {
 .navbar a:hover {
   color: #61dafb;
 }
+
+.main-header {
+    margin: auto;
+    padding: 50px;
+    text-align: center;
+}
