--- a/react-vite/src/pages/Splash.css
+++ b/react-vite/src/pages/Splash.css
@@ -3,8 +3,116 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     padding: 20px;
+    position: relative;
+  }
+  
+  .gradient-background {
+    background: rgb(48,49,54);
+    background: linear-gradient(173deg, rgba(48,49,54,1) 64%, rgba(127,127,138,1) 100%, rgba(77,73,142,1) 100%);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  
+  .welcome-container {
+    text-align: center;
+    margin: 10px;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    display: flex;  /* Added display flex to center title */
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  @media (min-width: 1024px) {
+    .welcome-title {
+      width: 60%;
+    }
+  }
+
+  .welcome-container h1 {
+    margin-bottom: 40px;
+    margin: 10px;
+    color: silver;
+  }
+
+  .green {
+    color: #bdd42a;
+  }
+
+  h3 {
+    color: silver;
+    margin-top: 40px;
+  }
+  .content-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .left-content, .right-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .left-content {
+    padding: 20px;
+  }
+   .right-content {
+      padding: 20px;
+    }
+  .left-content h3, .right-content h3 {
+    margin-bottom: 10px;
+  }
+  
+  .image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .welcome-image {
+    max-width: 80%;
+    height: auto;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .signup-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 50px;
+  }
+  
+  .signup-container h3 {
+    margin: 0;
+  }
+  
+  .signup-container button {
+    padding: 10px 20px;
+    background-color: #bdd42a;
+    color: rgb(57, 57, 57);
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .signup-container button:hover {
+    background-color: #0056b3;
   }
   
   .boards-container {
@@ -62,3 +170,20 @@
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
   }
+  
+  /* Responsive adjustments */
+  @media (max-width: 768px) {
+    .content-container {
+      grid-template-columns: 1fr;
+      gap: 10px;
+    }
+  
+    .left-content, .right-content {
+      align-items: center;
+    }
+  
+    .welcome-image {
+      max-width: 60%;
+    }
+  }
+  
