--- a/react-vite/src/components/Navigation/ProfileButton.css
+++ b/react-vite/src/components/Navigation/ProfileButton.css
@@ -5,7 +5,8 @@
 
 .profile-button {
     color: rgb(21, 21, 21);
-    background: rgb(200, 250, 100);
+    /* background: rgb(200, 250, 100); */
+    background-color: #61dafb;
     border: none;
     padding: 8px 16px;
     border-radius: 4px;
@@ -17,7 +18,8 @@
 }
 
 .profile-button:hover {
-    background-color: rgb(170, 208, 95);
+    /* background-color: rgb(170, 208, 95); */
+    background-color: #69bfd6;
 }
 
 .profile-dropdown {
@@ -25,7 +27,8 @@
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: rgb(200, 250, 100);
+    /* background-color: rgb(200, 250, 100); */
+    background-color: #61dafb;
     border: 1px solid #ddd;
     border-radius: 4px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -48,7 +51,8 @@
 }
 
 .profile-dropdown li:hover {
-    background: rgb(200, 250, 100);
+    /* background: rgb(200, 250, 100); */
+    background-color: #69bfd6;
 }
 
 .profile-info {
@@ -64,7 +68,8 @@
 .profile-dropdown button,
 .profile-logout button {
     width: 100%;
-    background-color: rgb(200, 250, 100);
+    /* background-color: rgb(200, 250, 100); */
+    background-color: #61dafb;
     color: rgb(21, 21, 21);
     border: none;
     padding: 8px 0;
@@ -75,5 +80,6 @@
 
 .profile-dropdown button:hover,
 .profile-logout button:hover {
-    background-color: rgb(170, 208, 95);
+    /* background-color: rgb(170, 208, 95); */
+    background-color: #69bfd6;
 }
