--- a/react-vite/src/pages/Splash.css
+++ b/react-vite/src/pages/Splash.css
@@ -47,7 +47,8 @@
   }
 
   .green {
-    color: #bdd42a;
+    /* color: #bdd42a; */
+    color: rgb(170, 208, 95);
   }
 
   h3 {
@@ -107,7 +108,8 @@
   
   .signup-container button {
     padding: 10px 20px;
-    background-color: rgb(200, 250, 100);
+    /* background-color: rgb(200, 250, 100); */
+    background-color: #61dafb;
     color: rgb(57, 57, 57);
     font-weight: 600;
     border: none;
@@ -117,7 +119,8 @@
   }
   
   .signup-container button:hover {
-    background-color: rgb(170, 208, 95);
+    /* background-color: rgb(170, 208, 95); */
+    background-color: #69bfd6;
   }
   
   .boards-container {
