--- a/react-vite/src/components/Card/Card.module.css
+++ b/react-vite/src/components/Card/Card.module.css
@@ -15,14 +15,16 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
+  padding: 0;
 }
 
 .cardButtonsText {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  margin-top: -7px;
-  font-size: 0.8rem;
+  padding: 0;
+  margin-top: -10px;
+  font-size: 0.7rem;
 }
 
 .card:hover {
