--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -3,8 +3,34 @@
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    padding: 10px 10;
+    width: 1555px;
+    /* position: fixed; */
+    /* display: flex;
+    flex-direction: column;
+    bottom: 0; */
+    /* align-self: center;
+    left: 0;
+    right: 0; */
+
 }
+
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    height: 1000px;
+    /* width: screen */
+    /* elements overflowing */
+}
+
+/* Full viewport height */
+
+
+
+.content-wrap {
+    padding-bottom: 60px;
+    flex: 1;
+}
+
+/* Takes up remaining space */
