--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -4,7 +4,8 @@
     color: #fff;
     text-align: center;
     padding: 10px 10;
-    width: 1555px;
+    width: screen;
+    /* width: 1555px; */
     /* position: fixed; */
     /* display: flex;
     flex-direction: column;
@@ -20,8 +21,8 @@
     display: flex;
     flex-direction: column;
     height: 1000px;
-    /* width: screen */
-    /* elements overflowing */
+    width: screen
+        /* elements overflowing */
 }
 
 /* Full viewport height */
