--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -8,11 +8,13 @@ ul {
   align-items: center;
   background-color: #20232a;
   padding: 10px 20px;
+  width: screen;
+  /* width: 1555px; */
 }
 
 li {
   margin: 0 15px;
-  color:rgb(201, 201, 197)
+  color: rgb(201, 201, 197)
 }
 
 a {
@@ -31,8 +33,8 @@ a {
 }
 
 .logo:hover {
-    transform: scale(1.05);
-  }
+  transform: scale(1.05);
+}
 
 .new_Board,
 /* .create-board-button, */
@@ -106,5 +108,6 @@ a {
 }
 
 .create-board-button:hover {
-  background-color: rgb(170, 208, 95);;
+  background-color: rgb(170, 208, 95);
+  ;
 }
