--- a/react-vite/src/pages/Splash.css
+++ b/react-vite/src/pages/Splash.css
@@ -6,19 +6,26 @@
     justify-content: flex-start;
     padding: 20px;
     position: relative;
+    height: 110%;
   }
   
   .gradient-background {
     background: rgb(48,49,54);
     background: linear-gradient(173deg, rgba(48,49,54,1) 64%, rgba(127,127,138,1) 100%, rgba(77,73,142,1) 100%);
     width: 100%;
-    height: 100vh;
+    height: 120%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
   }
-  
+   
+  @media (max-width: 1024px) {
+    .gradient-background {
+      height: 150%;
+    }
+  }
+
   .welcome-container {
     text-align: center;
     margin: 5px;
@@ -47,8 +54,7 @@
   }
 
   .green {
-    /* color: #bdd42a; */
-    color: rgb(170, 208, 95);
+    color: #bdd42a;
   }
 
   h3 {
@@ -108,8 +114,7 @@
   
   .signup-container button {
     padding: 10px 20px;
-    /* background-color: rgb(200, 250, 100); */
-    background-color: #61dafb;
+    background-color: #bdd42a;
     color: rgb(57, 57, 57);
     font-weight: 600;
     border: none;
@@ -119,8 +124,7 @@
   }
   
   .signup-container button:hover {
-    /* background-color: rgb(170, 208, 95); */
-    background-color: #69bfd6;
+    background-color: #0056b3;
   }
   
   .boards-container {
@@ -146,7 +150,7 @@
     width: 190px;
     height: 200px;
     padding: 10px;
-    background-color: #cfd0d4;
+    background-color: #d7d9de;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s;
@@ -209,3 +213,4 @@
         font-size: 1.2rem;
       }
   }
+  
