--- a/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
+++ b/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
@@ -11,12 +11,13 @@
     overflow: auto;
     background-color: rgba(75, 73, 73, 0.4);
   } */
-
+ 
 .modal {
-    width: 60vw;
+    width: 50vw;
     height: 65vh;
     background-color: slategray;
-    border-radius: 8px;
+    color: whitesmoke;
+    border-radius: 12px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -35,15 +36,16 @@
   .cardContent {
     display: flex;
     justify-content: space-between;
+    padding: 4px;
     width: 100%;
     height: 100%;
   }
   
   .cardTasks {
     width: 36%;
-    background-color: white;
-    color: black;
-    border: solid black 1px;
+    background-color: slategray;
+    color: whitesmoke;
+    border: solid rgb(92, 90, 90) 1px;
     border-radius: 8px;
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -51,9 +53,9 @@
   
   .cardComments {
     width: 60%;
-    background-color: white;
-    color: black;
-    border: solid black 1px;
+    background-color: slategray;
+    color: whitesmoke;
+    border: solid rgb(92, 90, 90) 1px;
     border-radius: 8px;
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -61,5 +63,25 @@
 
   .cardTasks h2, .cardComments h2 {
     text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .task {
+    display: flex;
+    /* justify-content: space-between; */
+    flex-direction: row;
+    padding: 2px;
+    margin: 2px;
+  }
+
+  .icon {
+    cursor: pointer;
+    background-color: transparent;
+    font-size: .6rem;
+    font-weight: 600;
+    margin-top: 12px;
+    margin-bottom: -3px;
+    margin-right: 5px;
+    border: solid rgb(92, 90, 90) .1rem;
   }
   
