--- a/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
+++ b/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
@@ -40,6 +40,15 @@
     background-color: whitesmoke;
   }
 
+  .comments {
+    list-style: none;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .cardTitle {
     text-align: center;
     margin-bottom: 10px;
