--- a/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
+++ b/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
@@ -11,8 +11,21 @@
     overflow: auto;
     background-color: rgba(75, 73, 73, 0.4);
   } */
+ .modal {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+ }
  
-.modal {
+.modalContent {
     width: 50vw;
     height: 65vh;
     background-color: slategray;
