styling changes and conversion to css modules

--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 /* src/components/Footer/Footer.css */
 .footer {
-    background-color: #333;
+    background-color: #20232a;
     color: #fff;
     text-align: center;
     padding: 20px 20px;
