--- a/react-vite/src/pages/BoardDetails.module.css
+++ b/react-vite/src/pages/BoardDetails.module.css
@@ -1,20 +1,22 @@
-.list-card {
+.listCard {
     border: 1px solid #ccc;
     padding: 10px;
     margin: 10px;
   }
 
-  .list-title {
+  .listTitle {
     font-size: 1.2em;
   }
 
   button {
     display: inline-block;
     margin: 5px;
+    margin-left: 30px;
     padding: 5px 10px;
     cursor: pointer;
   }
 
-  .lists-container {
+  .listsContainer {
     display: flex;
+    margin-bottom: 140px;
   }
