--- a/react-vite/src/pages/Splash.module.css
+++ b/react-vite/src/pages/Splash.module.css
@@ -1,5 +1,5 @@
 /* src/pages/Splash.css */
-.splash-container {
+.splashContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,8 +8,8 @@
   position: relative;
   height: 110%;
 }
-
-/* .gradient-background {
+ 
+/* .gradientBackground {
     background: rgb(48,49,54);
     background: linear-gradient(173deg, rgba(48,49,54,1) 64%, rgba(127,127,138,1) 100%, rgba(77,73,142,1) 100%);
     width: 100%;
@@ -21,12 +21,12 @@
   } */
 
 @media (max-width: 1024px) {
-  .gradient-background {
+  .gradientBackground {
     height: 150%;
   }
 }
 
-.welcome-container {
+.welcomeContainer {
   text-align: center;
   margin: 5px;
   margin-top: 60px;
@@ -37,18 +37,18 @@
 }
 
 @media (min-width: 1024px) {
-  .welcome-container {
+  .welcomeContainer {
     margin-top: 140px;
   }
 }
 
 @media (min-width: 1450px) {
-  .welcome-title {
+  .welcomeTitle {
     width: 60%;
   }
 }
 
-.welcome-container h1 {
+.welcomeContainer h1 {
   margin: 5px;
   color: silver;
 }
@@ -62,7 +62,7 @@ h3 {
   margin-top: 20px;
 }
 
-.content-container {
+.contentContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
@@ -71,14 +71,14 @@ h3 {
   margin: 0 auto;
 }
 
-.left-content,
-.right-content {
+.leftContent,
+.rightContent {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.left-content {
+.leftContent {
   padding: 20px;
 }
 
@@ -86,26 +86,26 @@ h3 {
   padding: 20px;
 }
 
-.left-content h3,
-.right-content h3 {
+.leftContent h3,
+.rightContent h3 {
   margin-bottom: 10px;
 }
 
-.image-wrapper {
+.imageWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
 }
 
-.welcome-image {
+.welcomeImage {
   max-width: 80%;
   height: auto;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(70, 69, 69, 0.2);
 }
 
-.signup-container {
+.signupContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -114,11 +114,11 @@ h3 {
   margin-top: 40px;
 }
 
-.signup-container h3 {
+.signupContainer h3 {
   margin: 0;
 }
 
-.signup-container button {
+.signupContainer button {
   padding: 10px 20px;
   /* background-color: #bdd42a; */
   background-color: #61dafb;
@@ -131,27 +131,27 @@ h3 {
   margin-bottom: 60px;
 }
 
-.signup-container button:hover {
+.signupContainer button:hover {
   /* background-color: rgb(170, 208, 95); */
   background-color: #69bfd6;
 }
 
-.boards-container {
+.boardsContainer {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
 }
 
-.board-link {
+.boardLink {
   text-decoration: none;
 }
 
-.board-link:hover {
+.boardLink:hover {
   text-decoration: none;
 }
 
-.board-card {
+.boardCard {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -171,11 +171,11 @@ h3 {
   /* Optimize text rendering for better legibility */
 }
 
-.board-card:hover {
+.boardCard:hover {
   transform: scale(1.05);
 }
 
-.board-name {
+.boardName {
   font-size: 26px;
   font-weight: bold;
   color: black;
@@ -186,7 +186,7 @@ h3 {
   text-rendering: optimizeLegibility;
 }
 
-.board-description {
+.boardDescription {
   font-size: 18px;
   color: #43424a;
   text-align: center;
@@ -197,7 +197,7 @@ h3 {
 
 /* Responsive adjustments */
 @media (max-width: 900px) {
-  .content-container {
+  .contentContainer {
     grid-template-columns: 1fr;
     gap: 10px;
   }
@@ -207,7 +207,7 @@ h3 {
     margin-top: 20px;
   }
 
-  .content-container {
+  .contentContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
@@ -216,41 +216,41 @@ h3 {
     margin: 0 auto;
   }
 
-  .left-content,
-  .right-content {
+  .leftContent,
+  .rightContent {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  .left-content {
+  .leftContent {
     padding: 20px;
   }
 
-  .right-content {
+  .rightContent {
     padding: 20px;
   }
 
-  .left-content h3,
-  .right-content h3 {
+  .leftContent h3,
+  .rightContent h3 {
     margin-bottom: 10px;
   }
 
-  .image-wrapper {
+  .imageWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
   }
 
-  .welcome-image {
+  .welcomeImage {
     max-width: 80%;
     height: auto;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(70, 69, 69, 0.2);
   }
 
-  .signup-container {
+  .signupContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -259,11 +259,11 @@ h3 {
     margin-top: 40px;
   }
 
-  .signup-container h3 {
+  .signupContainer h3 {
     margin: 0;
   }
 
-  .signup-container button {
+  .signupContainer button {
     padding: 10px 20px;
     /* background-color: #bdd42a; */
     background-color: #61dafb;
@@ -275,26 +275,26 @@ h3 {
     transition: background-color 0.3s;
   }
 
-  .signup-container button:hover {
+  .signupContainer button:hover {
     background-color: #69bfd6;
   }
 
-  .boards-container {
+  .boardsContainer {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
   }
 
-  .board-link {
+  .boardLink {
     text-decoration: none;
   }
 
-  .board-link:hover {
+  .boardLink:hover {
     text-decoration: none;
   }
 
-  .board-card {
+  .boardCard {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,11 +314,11 @@ h3 {
     /* Optimize text rendering for better legibility */
   }
 
-  .board-card:hover {
+  .boardCard:hover {
     transform: scale(1.05);
   }
 
-  .board-name {
+  .boardName {
     font-size: 26px;
     font-weight: bold;
     color: black;
@@ -329,7 +329,7 @@ h3 {
     text-rendering: optimizeLegibility;
   }
 
-  .board-description {
+  .boardDescription {
     font-size: 18px;
     color: #43424a;
     text-align: center;
@@ -340,12 +340,12 @@ h3 {
 
   /* Responsive adjustments */
   @media (max-width: 900px) {
-    .content-container {
+    .contentContainer {
       grid-template-columns: 1fr;
       gap: 10px;
     }
 
-    .signup-container {
+    .signupContainer {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -355,16 +355,16 @@ h3 {
       width: 80%;
     }
 
-    .left-content,
-    .right-content {
+    .leftContent,
+    .rightContent {
       align-items: center;
     }
 
-    .welcome-image {
+    .welcomeImage {
       max-width: 45%;
     }
 
-    .welcome-title {
+    .welcomeTitle {
       width: 80%;
       font-size: 1.2rem;
     }
