error for unauthorized delete

--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -191,6 +191,11 @@ a {
     color: white;
   }
 
+  .closeButton {
+    background: grey;
+    color: white;
+  }
+
   .red {
     color: red;
   }
