changed height in .page-container to screen

--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -27,7 +27,7 @@
 .page-container {
     display: flex;
     flex-direction: column;
-    height: 1000px;
+    height: screen;
     width: screen
         /* elements overflowing */
 }
