--- a/react-vite/src/components/Card/Card.module.css
+++ b/react-vite/src/components/Card/Card.module.css
@@ -126,6 +126,7 @@ button {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1000;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
