--- a/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
+++ b/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
@@ -13,16 +13,16 @@
   } */
  .modal {
     display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
  }
  
 .modalContent {
@@ -86,6 +86,7 @@
     border: solid rgb(92, 90, 90) 1px;
     border-radius: 8px;
     padding: 10px;
+    margin-right: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
@@ -96,6 +97,7 @@
     border: solid rgb(92, 90, 90) 1px;
     border-radius: 8px;
     padding: 10px;
+    margin-left: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
@@ -114,7 +116,7 @@
 
   .taskButton {
     background-color: #61dafb;
-    color: rgb(57, 55, 55);
+    color: rgb(42, 41, 41);
     border: none;
     padding: 5px;
     margin-left: 5px;
@@ -125,9 +127,11 @@
     background-color: transparent;
     font-size: .6rem;
     font-weight: 600;
-    margin-top: 12px;
-    margin-bottom: -3px;
+    padding-top: -3px;
+    margin-top: 2px;
+    margin-bottom: -2px;
     margin-right: 5px;
-    border: solid rgb(92, 90, 90) .1rem;
+    color: black;
+    border: solid rgb(37, 36, 36) .1rem;
   }
   
