--- a/react-vite/src/components/Lists/Lists.module.css
+++ b/react-vite/src/components/Lists/Lists.module.css
@@ -79,25 +79,32 @@ button + button {
 }
 
 .confirmModal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
   }
   
   .confirmModalContent {
-    background-color: white;
-    color: black;
+    background-color: #20232a;
+    margin: auto;
     padding: 20px;
-    border-radius: 8px;
-    text-align: center;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    border-radius: 10px;
+    /* Rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    color: white;
   }
-  
+   
   .confirmButton {
     margin-right: 10px;
     padding: 8px 16px;
@@ -119,4 +126,9 @@ button + button {
 
   .red {
     color: red;
+  }
+
+  input {
+    padding: 8px;
+    margin: 8px;
   }
