edit and delete button only appear in navbar if board owner is logged in

--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -42,3 +42,35 @@
 }
 
 /* Takes up remaining space */
+
+
+/* src/components/Footer/Footer.css */
+/* .footer {
+    background-color: #20232a;
+    color: #fff;
+    text-align: center;
+    padding: 20px 20px;
+    margin-bottom: screen;
+    width: screen;
+}
+
+@media (max-width: 850px) {
+    .footer {
+        margin-bottom: 0px;
+    }
+}
+
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    height: screen;
+    width: screen;
+}
+
+
+.content-wrap {
+    padding-bottom: 60px;
+    flex: 1;
+}
+ */
