css styling for mobile

--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -4,7 +4,8 @@
     color: #fff;
     text-align: center;
     padding: 20px 20px;
-    margin-bottom: -14px;
+    margin-bottom: 0px;
+    margin-top: 200px;
     width: screen;
     /* width: 1555px; */
     /* position: fixed; */
