--- a/react-vite/src/pages/Splash.module.css
+++ b/react-vite/src/pages/Splash.module.css
@@ -4,9 +4,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  margin: 60px;
   padding: 20px;
+  margin-bottom: 300px;
   position: relative;
-  height: 110%;
+  width: screen;
+  height: 120%;
 }
  
 /* .gradientBackground {
@@ -23,6 +26,7 @@
 @media (max-width: 1024px) {
   .gradientBackground {
     height: 150%;
+    width: screen;
   }
 }
 
