fixed add card icon

--- a/react-vite/src/components/Lists/Lists.module.css
+++ b/react-vite/src/components/Lists/Lists.module.css
@@ -73,6 +73,13 @@ button + button {
     font-size: 14px;
 }
 
+.addCard {
+    background-color: #a3e929;
+    color: black;
+    opacity: .8;
+    font-size: 14px;
+}
+
 .text {
     font-size: 14px;
     color: black;
