--- a/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
+++ b/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
@@ -1,17 +1,4 @@
-/* .modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    width: 60vw;
-    height: 65vh;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    overflow: auto;
-    background-color: rgba(75, 73, 73, 0.4);
-  } */
- .modal {
+.modal {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,8 +10,8 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
- }
- 
+}
+
 .modalContent {
     width: 50vw;
     height: 65vh;
@@ -35,51 +22,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .cardComments button {
-    background-color: #61dafb;
-    color: rgb(57, 55, 55);
-  }
+}
 
-  .cardComments button:hover {
-    background-color: #69bfd6;
-  }
-
-  .cardComments input {
-    width: 80%;
-    padding: 5px;
-    margin-bottom: 2px;
-    background-color: whitesmoke;
-  }
-
-  .comments {
-    list-style: none;
-    padding: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .cardTitle {
+.cardTitle {
     text-align: center;
     margin-bottom: 10px;
-  }
-  
-  .cardDescription {
-    margin-bottom: 10px;
-  }
+}
 
-  .cardContent {
+.cardDescription {
+    margin-bottom: 10px;
+}
+
+.cardContent {
     display: flex;
     justify-content: space-between;
     padding: 4px;
     width: 100%;
     height: 100%;
-  }
-  
-  .cardTasks {
+}
+
+.cardTasks {
     width: 36%;
     background-color: slategray;
     color: whitesmoke;
@@ -88,10 +50,11 @@
     padding: 10px;
     margin-right: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .cardComments {
+}
+
+.cardComments {
     width: 60%;
+    height: 50vh;
     background-color: slategray;
     color: whitesmoke;
     border: solid rgb(92, 90, 90) 1px;
@@ -99,39 +62,73 @@
     padding: 10px;
     margin-left: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+}
 
-  .cardTasks h2, .cardComments h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .task {
+.cardComments form, .taskForm {
     display: flex;
-    /* justify-content: space-between; */
-    flex-direction: row;
-    padding: 2px;
-    margin: 2px;
-  }
+    align-items: center;
+    margin-bottom: 10px;
+}
 
-  .taskButton {
-    background-color: #61dafb;
-    color: rgb(42, 41, 41);
-    border: none;
+.taskInput, .cardComments input {
+    width: 80%;
     padding: 5px;
-    margin-left: 5px;
-  }
-  
-  .icon {
-    cursor: pointer;
-    background-color: transparent;
-    font-size: .6rem;
-    font-weight: 600;
-    padding-top: -3px;
-    margin-top: 2px;
-    margin-bottom: -2px;
     margin-right: 5px;
-    color: black;
-    border: solid rgb(37, 36, 36) .1rem;
-  }
-  
+    background-color: whitesmoke;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.comments {
+    list-style: none;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 40vh;
+    overflow-y: auto;
+}
+
+/* Style the scrollbar */
+.comments::-webkit-scrollbar {
+    width: 6px;
+}
+
+.comments::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+}
+
+.comments::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.icon {
+    font-size: 12px;
+    cursor: pointer;
+    transition: color 0.3s;
+    color: #61dafb;
+    margin-left: 10px;
+}
+
+.icon:hover {
+    color: #69bfd6;
+}
+
+.taskItem, .commentItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.taskDescription, .commentText {
+    flex-grow: 1;
+}
+
+.taskIcons, .commentIcons {
+    display: flex;
+    align-items: center;
+}
