--- a/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
+++ b/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
@@ -62,6 +62,10 @@
     align-items: center;
   }
 
+  .comment-content {
+    overflow: hidden;
+  }
+
   .cardTitle {
     text-align: center;
     margin-bottom: 10px;
@@ -97,6 +101,7 @@
     border-radius: 8px;
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
   }
 
   .cardTasks h2, .cardComments h2 {
@@ -104,6 +109,14 @@
     margin-bottom: 20px;
   }
   
+  .clipped {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 100%;
+    cursor: pointer;
+  }
+
   .task {
     display: flex;
     /* justify-content: space-between; */
